--- a/web/themes/custom/eses/scss/component/_paragraphs.scss
+++ b/web/themes/custom/eses/scss/component/_paragraphs.scss
@@ -4,16 +4,23 @@
   border-bottom: 1px dotted #ccc;
 
   &.paragraph--type-text-with-image {
-    img {
-      width: 50%;
+    @media #{$tablet} {
+      img {
+        width: 65%;
 
-      &.image-left {
-        float: left;
-        margin: 0 10px 10px 0;
+        &.image-left {
+          float: left;
+          margin: 0 10px 10px 0;
+        }
+        &.image-right {
+          float: right;
+          margin: 0 0 10px 10px;
+        }
       }
-      &.image-right {
-        float: right;
-        margin: 0 0 10px 10px;
+    }
+    @media #{$wide} {
+      img {
+        width: 50%;
       }
     }
   }
